# models/cdd_sdk/generated/cdd_sdkgo/model_thumbnail.go
@@ -1,214 +1,0 @@
-/*
-CddService
-
-No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-
-API version: 1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package cdd_sdkgo
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the Thumbnail type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &Thumbnail{}
-
-// Thumbnail struct for Thumbnail
-type Thumbnail struct {
-	Name string `json:"name"`
-	Id string `json:"id"`
-	LocalPath string `json:"localPath"`
-}
-
-type _Thumbnail Thumbnail
-
-// NewThumbnail instantiates a new Thumbnail object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewThumbnail(name string, id string, localPath string) *Thumbnail {
-	this := Thumbnail{}
-	this.Name = name
-	this.Id = id
-	this.LocalPath = localPath
-	return &this
-}
-
-// NewThumbnailWithDefaults instantiates a new Thumbnail object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewThumbnailWithDefaults() *Thumbnail {
-	this := Thumbnail{}
-	return &this
-}
-
-// GetName returns the Name field value
-func (o *Thumbnail) GetName() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Name
-}
-
-// GetNameOk returns a tuple with the Name field value
-// and a boolean to check if the value has been set.
-func (o *Thumbnail) GetNameOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Name, true
-}
-
-// SetName sets field value
-func (o *Thumbnail) SetName(v string) {
-	o.Name = v
-}
-
-// GetId returns the Id field value
-func (o *Thumbnail) GetId() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Id
-}
-
-// GetIdOk returns a tuple with the Id field value
-// and a boolean to check if the value has been set.
-func (o *Thumbnail) GetIdOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Id, true
-}
-
-// SetId sets field value
-func (o *Thumbnail) SetId(v string) {
-	o.Id = v
-}
-
-// GetLocalPath returns the LocalPath field value
-func (o *Thumbnail) GetLocalPath() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.LocalPath
-}
-
-// GetLocalPathOk returns a tuple with the LocalPath field value
-// and a boolean to check if the value has been set.
-func (o *Thumbnail) GetLocalPathOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.LocalPath, true
-}
-
-// SetLocalPath sets field value
-func (o *Thumbnail) SetLocalPath(v string) {
-	o.LocalPath = v
-}
-
-func (o Thumbnail) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o Thumbnail) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["name"] = o.Name
-	toSerialize["id"] = o.Id
-	toSerialize["localPath"] = o.LocalPath
-	return toSerialize, nil
-}
-
-func (o *Thumbnail) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"name",
-		"id",
-		"localPath",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varThumbnail := _Thumbnail{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varThumbnail)
-
-	if err != nil {
-		return err
-	}
-
-	*o = Thumbnail(varThumbnail)
-
-	return err
-}
-
-type NullableThumbnail struct {
-	value *Thumbnail
-	isSet bool
-}
-
-func (v NullableThumbnail) Get() *Thumbnail {
-	return v.value
-}
-
-func (v *NullableThumbnail) Set(val *Thumbnail) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableThumbnail) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableThumbnail) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableThumbnail(val *Thumbnail) *NullableThumbnail {
-	return &NullableThumbnail{value: val, isSet: true}
-}
-
-func (v NullableThumbnail) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableThumbnail) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
